gen/com/jonathanmackenzie/opencl/plugin/OpenClParser.java
// This is a generated file. Not intended for manual editing.
package com.jonathanmackenzie.opencl.plugin;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.jonathanmackenzie.opencl.plugin.psi.OpenClTypes.*;
import static com.jonathanmackenzie.opencl.plugin.OpenClParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class OpenClParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ABSTRACT_DECLARATOR) {
      r = abstract_declarator(b, 0);
    }
    else if (t == ADDITIVE_EXP) {
      r = additive_exp(b, 0);
    }
    else if (t == AND_EXP) {
      r = and_exp(b, 0);
    }
    else if (t == ARGUMENT_EXP_LIST) {
      r = argument_exp_list(b, 0);
    }
    else if (t == ASSIGNMENT_EXP) {
      r = assignment_exp(b, 0);
    }
    else if (t == ASSIGNMENT_OPERATOR) {
      r = assignment_operator(b, 0);
    }
    else if (t == CAST_EXP) {
      r = cast_exp(b, 0);
    }
    else if (t == COMPOUND_STAT) {
      r = compound_stat(b, 0);
    }
    else if (t == CONDITIONAL_EXP) {
      r = conditional_exp(b, 0);
    }
    else if (t == CONST) {
      r = consumeToken(b, CONST_$);
    }
    else if (t == CONST_EXP) {
      r = const_exp(b, 0);
    }
    else if (t == DECL) {
      r = decl(b, 0);
    }
    else if (t == DECL_LIST) {
      r = decl_list(b, 0);
    }
    else if (t == DECL_SPECS) {
      r = decl_specs(b, 0);
    }
    else if (t == DECLARATOR) {
      r = declarator(b, 0);
    }
    else if (t == DIRECT_ABSTRACT_DECLARATOR) {
      r = direct_abstract_declarator(b, 0);
    }
    else if (t == DIRECT_DECLARATOR) {
      r = direct_declarator(b, 0);
    }
    else if (t == ENUM_SPEC) {
      r = enum_spec(b, 0);
    }
    else if (t == ENUMERATOR) {
      r = enumerator(b, 0);
    }
    else if (t == ENUMERATOR_LIST) {
      r = enumerator_list(b, 0);
    }
    else if (t == EQUALITY_EXP) {
      r = equality_exp(b, 0);
    }
    else if (t == EXCLUSIVE_OR_EXP) {
      r = exclusive_or_exp(b, 0);
    }
    else if (t == EXP) {
      r = exp(b, 0);
    }
    else if (t == EXP_STAT) {
      r = exp_stat(b, 0);
    }
    else if (t == EXTERNAL_DECL) {
      r = external_decl(b, 0);
    }
    else if (t == FUNCTION_DEFINITION) {
      r = function_definition(b, 0);
    }
    else if (t == ID_LIST) {
      r = id_list(b, 0);
    }
    else if (t == INCLUSIVE_OR_EXP) {
      r = inclusive_or_exp(b, 0);
    }
    else if (t == INIT_DECLARATOR) {
      r = init_declarator(b, 0);
    }
    else if (t == INIT_DECLARATOR_LIST) {
      r = init_declarator_list(b, 0);
    }
    else if (t == INITIALIZER) {
      r = initializer(b, 0);
    }
    else if (t == INITIALIZER_LIST) {
      r = initializer_list(b, 0);
    }
    else if (t == ITERATION_STAT) {
      r = iteration_stat(b, 0);
    }
    else if (t == JUMP_STAT) {
      r = jump_stat(b, 0);
    }
    else if (t == LABELED_STAT) {
      r = labeled_stat(b, 0);
    }
    else if (t == LOGICAL_AND_EXP) {
      r = logical_and_exp(b, 0);
    }
    else if (t == LOGICAL_OR_EXP) {
      r = logical_or_exp(b, 0);
    }
    else if (t == MEMORY_SPEC) {
      r = memory_spec(b, 0);
    }
    else if (t == MULT_EXP) {
      r = mult_exp(b, 0);
    }
    else if (t == PARAM_DECL) {
      r = param_decl(b, 0);
    }
    else if (t == PARAM_LIST) {
      r = param_list(b, 0);
    }
    else if (t == PARAM_TYPE_LIST) {
      r = param_type_list(b, 0);
    }
    else if (t == POINTER) {
      r = pointer(b, 0);
    }
    else if (t == POSTFIX_EXP) {
      r = postfix_exp(b, 0);
    }
    else if (t == PRIMARY_EXP) {
      r = primary_exp(b, 0);
    }
    else if (t == RELATIONAL_EXP) {
      r = relational_exp(b, 0);
    }
    else if (t == SELECTION_STAT) {
      r = selection_stat(b, 0);
    }
    else if (t == SHIFT_EXPRESSION) {
      r = shift_expression(b, 0);
    }
    else if (t == SPEC_QUALIFIER_LIST) {
      r = spec_qualifier_list(b, 0);
    }
    else if (t == STAT) {
      r = stat(b, 0);
    }
    else if (t == STAT_LIST) {
      r = stat_list(b, 0);
    }
    else if (t == STORAGE_CLASS_SPEC) {
      r = storage_class_spec(b, 0);
    }
    else if (t == STRUCT_DECL) {
      r = struct_decl(b, 0);
    }
    else if (t == STRUCT_DECL_LIST) {
      r = struct_decl_list(b, 0);
    }
    else if (t == STRUCT_DECLARATOR) {
      r = struct_declarator(b, 0);
    }
    else if (t == STRUCT_DECLARATOR_LIST) {
      r = struct_declarator_list(b, 0);
    }
    else if (t == STRUCT_OR_UNION) {
      r = struct_or_union(b, 0);
    }
    else if (t == STRUCT_OR_UNION_SPEC) {
      r = struct_or_union_spec(b, 0);
    }
    else if (t == TYPE_NAME) {
      r = type_name(b, 0);
    }
    else if (t == TYPE_QUALIFIER) {
      r = type_qualifier(b, 0);
    }
    else if (t == TYPE_QUALIFIER_LIST) {
      r = type_qualifier_list(b, 0);
    }
    else if (t == TYPE_SPEC) {
      r = type_spec(b, 0);
    }
    else if (t == TYPEDEF_NAME) {
      r = typedef_name(b, 0);
    }
    else if (t == UNARY_EXP) {
      r = unary_exp(b, 0);
    }
    else if (t == UNARY_OPERATOR) {
      r = unary_operator(b, 0);
    }
    else if (t == VECTOR_SIZE) {
      r = vector_size(b, 0);
    }
    else if (t == VECTOR_TYPE) {
      r = vector_type(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return translation_unit(b, l + 1);
  }

  /* ********************************************************** */
  // pointer
  // 			| pointer direct_abstract_declarator
  // 			|	direct_abstract_declarator
  public static boolean abstract_declarator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abstract_declarator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_DECLARATOR, "<abstract declarator>");
    r = pointer(b, l + 1);
    if (!r) r = abstract_declarator_1(b, l + 1);
    if (!r) r = direct_abstract_declarator(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // pointer direct_abstract_declarator
  private static boolean abstract_declarator_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abstract_declarator_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = pointer(b, l + 1);
    r = r && direct_abstract_declarator(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // mult_exp
  // 			| additive_exp '+' mult_exp
  // 			| additive_exp '-' mult_exp
  public static boolean additive_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_exp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITIVE_EXP, "<additive exp>");
    r = mult_exp(b, l + 1);
    if (!r) r = additive_exp_1(b, l + 1);
    if (!r) r = additive_exp_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // additive_exp '+' mult_exp
  private static boolean additive_exp_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_exp_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = additive_exp(b, l + 1);
    r = r && consumeToken(b, "+");
    r = r && mult_exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // additive_exp '-' mult_exp
  private static boolean additive_exp_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_exp_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = additive_exp(b, l + 1);
    r = r && consumeToken(b, "-");
    r = r && mult_exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // equality_exp
  // 			| and_exp '&' equality_exp
  public static boolean and_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_exp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AND_EXP, "<and exp>");
    r = equality_exp(b, l + 1);
    if (!r) r = and_exp_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // and_exp '&' equality_exp
  private static boolean and_exp_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_exp_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = and_exp(b, l + 1);
    r = r && consumeToken(b, "&");
    r = r && equality_exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // assignment_exp
  // 			| argument_exp_list ',' assignment_exp
  public static boolean argument_exp_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_exp_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT_EXP_LIST, "<argument exp list>");
    r = assignment_exp(b, l + 1);
    if (!r) r = argument_exp_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // argument_exp_list ',' assignment_exp
  private static boolean argument_exp_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_exp_list_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = argument_exp_list(b, l + 1);
    r = r && consumeToken(b, ",");
    r = r && assignment_exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // conditional_exp
  // 			| unary_exp assignment_operator assignment_exp
  public static boolean assignment_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_exp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_EXP, "<assignment exp>");
    r = conditional_exp(b, l + 1);
    if (!r) r = assignment_exp_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // unary_exp assignment_operator assignment_exp
  private static boolean assignment_exp_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_exp_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = unary_exp(b, l + 1);
    r = r && assignment_operator(b, l + 1);
    r = r && assignment_exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '=' | '*=' | '/=' | '%=' | '+=' | '-=' | '<<='
  // 			| '>>=' | '&=' | '^=' | '|='
  public static boolean assignment_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_operator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_OPERATOR, "<assignment operator>");
    r = consumeToken(b, "=");
    if (!r) r = consumeToken(b, "*=");
    if (!r) r = consumeToken(b, "/=");
    if (!r) r = consumeToken(b, "%=");
    if (!r) r = consumeToken(b, "+=");
    if (!r) r = consumeToken(b, "-=");
    if (!r) r = consumeToken(b, "<<=");
    if (!r) r = consumeToken(b, ">>=");
    if (!r) r = consumeToken(b, "&=");
    if (!r) r = consumeToken(b, "^=");
    if (!r) r = consumeToken(b, "|=");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // unary_exp
  // 			| '(' type_name ')' cast_exp
  public static boolean cast_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cast_exp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CAST_EXP, "<cast exp>");
    r = unary_exp(b, l + 1);
    if (!r) r = cast_exp_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '(' type_name ')' cast_exp
  private static boolean cast_exp_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cast_exp_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "(");
    r = r && type_name(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && cast_exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '{' decl_list stat_list '}'
  // 			| '{'		stat_list '}'
  // 			| '{' decl_list		'}'
  // 			| '{'			'}'
  public static boolean compound_stat(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_stat")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPOUND_STAT, "<compound stat>");
    r = compound_stat_0(b, l + 1);
    if (!r) r = compound_stat_1(b, l + 1);
    if (!r) r = compound_stat_2(b, l + 1);
    if (!r) r = compound_stat_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '{' decl_list stat_list '}'
  private static boolean compound_stat_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_stat_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "{");
    r = r && decl_list(b, l + 1);
    r = r && stat_list(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, null, r);
    return r;
  }

  // '{'		stat_list '}'
  private static boolean compound_stat_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_stat_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "{");
    r = r && stat_list(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, null, r);
    return r;
  }

  // '{' decl_list		'}'
  private static boolean compound_stat_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_stat_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "{");
    r = r && decl_list(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, null, r);
    return r;
  }

  // '{'			'}'
  private static boolean compound_stat_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_stat_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "{");
    r = r && consumeToken(b, "}");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // logical_or_exp
  // 			| logical_or_exp '?' exp ':' conditional_exp
  public static boolean conditional_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_exp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONDITIONAL_EXP, "<conditional exp>");
    r = logical_or_exp(b, l + 1);
    if (!r) r = conditional_exp_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // logical_or_exp '?' exp ':' conditional_exp
  private static boolean conditional_exp_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_exp_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = logical_or_exp(b, l + 1);
    r = r && consumeToken(b, "?");
    r = r && exp(b, l + 1);
    r = r && consumeToken(b, ":");
    r = r && conditional_exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // int_const
  // 			| char_const
  // 			| float_const
  // 			| enumeration_const
  public static boolean const_$(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_$")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONST, "<const>");
    r = consumeToken(b, INT_CONST);
    if (!r) r = consumeToken(b, CHAR_CONST);
    if (!r) r = consumeToken(b, FLOAT_CONST);
    if (!r) r = consumeToken(b, ENUMERATION_CONST);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // conditional_exp
  public static boolean const_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_exp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONST_EXP, "<const exp>");
    r = conditional_exp(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // decl_specs init_declarator_list ';'
  // 			| decl_specs			';'
  public static boolean decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECL, "<decl>");
    r = decl_0(b, l + 1);
    if (!r) r = decl_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // decl_specs init_declarator_list ';'
  private static boolean decl_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = decl_specs(b, l + 1);
    r = r && init_declarator_list(b, l + 1);
    r = r && consumeToken(b, ";");
    exit_section_(b, m, null, r);
    return r;
  }

  // decl_specs			';'
  private static boolean decl_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = decl_specs(b, l + 1);
    r = r && consumeToken(b, ";");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // decl
  // 			| decl_list decl
  public static boolean decl_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECL_LIST, "<decl list>");
    r = decl(b, l + 1);
    if (!r) r = decl_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // decl_list decl
  private static boolean decl_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_list_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = decl_list(b, l + 1);
    r = r && decl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // storage_class_spec decl_specs
  // 			| storage_class_spec
  // 			| type_spec decl_specs
  // 			| type_spec
  // 			| type_qualifier decl_specs
  // 			| type_qualifier
  // 			| '__kernel' decl_specs
  public static boolean decl_specs(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_specs")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECL_SPECS, "<decl specs>");
    r = decl_specs_0(b, l + 1);
    if (!r) r = storage_class_spec(b, l + 1);
    if (!r) r = decl_specs_2(b, l + 1);
    if (!r) r = type_spec(b, l + 1);
    if (!r) r = decl_specs_4(b, l + 1);
    if (!r) r = type_qualifier(b, l + 1);
    if (!r) r = decl_specs_6(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // storage_class_spec decl_specs
  private static boolean decl_specs_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_specs_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = storage_class_spec(b, l + 1);
    r = r && decl_specs(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // type_spec decl_specs
  private static boolean decl_specs_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_specs_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = type_spec(b, l + 1);
    r = r && decl_specs(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // type_qualifier decl_specs
  private static boolean decl_specs_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_specs_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = type_qualifier(b, l + 1);
    r = r && decl_specs(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '__kernel' decl_specs
  private static boolean decl_specs_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_specs_6")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "__kernel");
    r = r && decl_specs(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // pointer direct_declarator
  // 			|	direct_declarator
  public static boolean declarator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declarator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECLARATOR, "<declarator>");
    r = declarator_0(b, l + 1);
    if (!r) r = direct_declarator(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // pointer direct_declarator
  private static boolean declarator_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declarator_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = pointer(b, l + 1);
    r = r && direct_declarator(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '(' abstract_declarator ')'
  // 			| direct_abstract_declarator '[' const_exp ']'
  // 			|				'[' const_exp ']'
  // 			| direct_abstract_declarator '['	']'
  // 			|				'['	']'
  // 			| direct_abstract_declarator '(' param_type_list ')'
  // 			|				'(' param_type_list ')'
  // 			| direct_abstract_declarator '('		')'
  // 			|				'('		')'
  public static boolean direct_abstract_declarator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "direct_abstract_declarator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DIRECT_ABSTRACT_DECLARATOR, "<direct abstract declarator>");
    r = direct_abstract_declarator_0(b, l + 1);
    if (!r) r = direct_abstract_declarator_1(b, l + 1);
    if (!r) r = direct_abstract_declarator_2(b, l + 1);
    if (!r) r = direct_abstract_declarator_3(b, l + 1);
    if (!r) r = direct_abstract_declarator_4(b, l + 1);
    if (!r) r = direct_abstract_declarator_5(b, l + 1);
    if (!r) r = direct_abstract_declarator_6(b, l + 1);
    if (!r) r = direct_abstract_declarator_7(b, l + 1);
    if (!r) r = direct_abstract_declarator_8(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '(' abstract_declarator ')'
  private static boolean direct_abstract_declarator_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "direct_abstract_declarator_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "(");
    r = r && abstract_declarator(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, m, null, r);
    return r;
  }
